Ensure gallery images don't overflow

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -31,6 +31,7 @@
   right: 0;
   bottom: 0;
   z-index: 1;
+  overflow: hidden;
 }
 
 .rotating-gallery-background::before {
@@ -56,6 +57,7 @@
   position: relative;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .gallery-image {
@@ -66,6 +68,7 @@
   height: 100%;
   opacity: 0;
   transition: opacity 1.5s cubic-bezier(0.4, 0, 0.2, 1);
+  overflow: hidden;
 }
 
 .gallery-image.active {
